--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,41 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# ==============================
+# Common Node.js
+# ==============================
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+package-lock.json
 
+# ==============================
+# Frontend (React)
+# ==============================
+/build
+/.pnp
+.pnp.js
 
+# React testing
+/coverage
+
+# Misc
+.DS_Store
+
+# ==============================
+# Environment Variables
+# ==============================
 .env
+.env.*
+!.env.example
+
+# ==============================
+# Vercel/Deployment Artifacts
+# ==============================
+.vercel
+
+# ==============================
+# Optional OS/System Files
+# ==============================
+Thumbs.db
+ehthumbs.db
+Desktop.ini
